<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:background="@color/white">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="horizontal">

        <LinearLayout
                android:id="@+id/btnCall"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_weight="0.8"
                android:orientation="vertical"
                android:background="?selectableItemBackgroundBorderless"
                android:gravity="center">

            <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/ic_call"/>

            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="@string/call"
                      android:textStyle="bold"
                      style="@style/ActionsButtonsText"/>
        </LinearLayout>

        <LinearLayout
                android:id="@+id/btnServices"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_weight="0.8"
                android:orientation="vertical"
                android:background="?selectableItemBackgroundBorderless"
                android:gravity="center">

            <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/ic_services"/>

            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="@string/services"
                      style="@style/ActionsButtonsText"/>
        </LinearLayout>

        <LinearLayout
                android:id="@+id/btnAddress"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:orientation="vertical"
                android:background="?selectableItemBackgroundBorderless"
                android:gravity="center">

            <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/ic_pin"/>

            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="@string/address"
                      style="@style/ActionsButtonsText"/>
        </LinearLayout>

        <LinearLayout
                android:id="@+id/btnComments"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:orientation="vertical"
                android:background="?selectableItemBackgroundBorderless"
                android:gravity="center">

            <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/ic_comments"/>

            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="@string/Comments"
                      style="@style/ActionsButtonsText"/>

        </LinearLayout>

        <LinearLayout
                android:id="@+id/btnFavorites"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:orientation="vertical"
                android:background="?selectableItemBackgroundBorderless"
                android:gravity="center">

            <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/ic_favorite"/>

            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="@string/favorites"
                      style="@style/ActionsButtonsText"/>
        </LinearLayout>

    </LinearLayout>

    <View android:layout_width="match_parent"
          android:layout_height="1dp"
          android:layout_marginLeft="30dp"
          android:layout_marginRight="30dp"
          android:layout_marginTop="13dp"
          android:background="@color/gray2"/>

</LinearLayout>